# Hardware-Reader

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Hardware.hpp
src/: Hardware.cpp  main.cpp
